PATCH (delete) comment (server)
