# swagger.yaml
@@ -607,3 +607,62 @@ paths:
                   message:
                     type: string
                     example: "Unauthorized"
+
+  /blog/{postId}/{commentId}:
+    patch:
+      tags:
+        - Blog
+      summary: Delete comments from user who wrote them or Admin
+      description: Delete comment
+      operationId: Delete comment
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: postId
+          schema:
+            type: string
+            minimum: 1
+          required: true
+          description: ID of the post
+        - in: path
+          name: commentId
+          schema:
+            type: string
+            minimum: 1
+          required: true
+          description: ID of the comment
+
+      responses:
+        "200":
+          description: Modified
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Modified"
+
+        "400":
+          description: Comment ID & user ID match
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "This comment does not exist or is not your comment."
+
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Unauthorized"
